--- a/assets/sass/_custom.sass
+++ b/assets/sass/_custom.sass
@@ -12,3 +12,7 @@
     border-bottom: 2px solid gray
     border-left: 9px solid gray
     padding-left: 16px
+
+h2.post_related
+  margin-top: 60px;
+  margin-bottom: 0;
